🤖 DEPLOY: last updates

--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 <summary class="title"><span class="icon"><i class="fa fa-check-circle"></i></span> Corresponding Artifact</summary>
 <div class="content">
 <div class="paragraph">
-<p><a href="https://formalrequirements.github.io/requirements-handbook/#5-book-templates" class="bare">https://formalrequirements.github.io/requirements-handbook/#5-book-templates</a></p>
+<p><a href="https://formalrequirements.github.io/requirements-handbook/#_book_templates" class="bare">https://formalrequirements.github.io/requirements-handbook/#_book_templates</a></p>
 </div>
 </div>
 </details>
@@ -759,7 +759,7 @@ It will serve as a companion for the <a href="#handbook">Handbook</a>.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-02-06 14:26:39 +0100
+Last updated 2021-02-06 19:03:38 +0100
 </div>
 </div>
 </body>
