--- a/index.html
+++ b/index.html
@@ -572,9 +572,9 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 </dd>
 </dl>
 </div>
-<div id="handbook" class="dlist">
+<div id="Handbook" class="dlist">
 <dl>
-<dt class="hdlist1"><a href="#handbook">Handbook</a></dt>
+<dt class="hdlist1"><a href="#Handbook">Handbook</a></dt>
 <dd>
 <p>The book, entitled "Handbook of requirements and business analysis", written by Bertrand Meyer (see PDF <a href="http://se.ethz.ch/~meyer/down/requirements_handbook/REQUIREMENTS.pdf">here</a>), and for which the <a href="#companion">Companion Book</a> serves as a complementary material.</p>
 </dd>
@@ -666,7 +666,7 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 <h3 id="_g_4_system_overview">G.4 System overview</h3>
 <div class="paragraph">
 <p>The <em>system</em> to be developed in this specification is an unusual one: a book!
-It will serve as a companion for the <a href="#handbook">Handbook</a>.</p>
+It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </div>
 </div>
 <div class="sect2">
@@ -699,14 +699,14 @@ It will serve as a companion for the <a href="#handbook">Handbook</a>.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">In charge of the edition of the <a href="#companion">Companion Book</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Readers of the <a href="#handbook">Handbook</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Readers of the <a href="#Handbook">Handbook</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">User</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Readers of the main <a href="#handbook">Handbook</a> that might need additional information about the method</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Readers of the main <a href="#Handbook">Handbook</a> that might need additional information about the method</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a id="readerC"></a>Readers of the <a href="#companion">Companion Book</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">User</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Person reading the <a href="#companion">Companion Book</a> who might not have access to the main <a href="#handbook">Handbook</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Person reading the <a href="#companion">Companion Book</a> who might not have access to the main <a href="#Handbook">Handbook</a></p></td>
 </tr>
 </tbody>
 </table>
@@ -728,7 +728,7 @@ It will serve as a companion for the <a href="#handbook">Handbook</a>.</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Bertrand Meyer</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Domain Expert</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Author of the <a href="#handbook">Handbook</a>, and main evaluator of the <a href="#companion">Companion Book</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Author of the <a href="#Handbook">Handbook</a>, and main evaluator of the <a href="#companion">Companion Book</a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
