--- a/index.html
+++ b/index.html
@@ -440,26 +440,26 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body class="article toc2 toc-left">
+<body class="book toc2 toc-left">
 <div id="header">
 <h1>Companion Requirements</h1>
 <div class="details">
 <span id="author" class="author">J.-M. Bruel</span><br>
 <span id="email" class="email"><a href="mailto:bruel@irit.fr">bruel@irit.fr</a></span><br>
-<span id="revdate">1.0 -- 2021-02-07</span>
+<span id="revdate">1.0 -- 2021-02-08</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
-<li><a href="#_process">Process</a>
+<li><a href="#_goals">Goals</a>
 <ul class="sectlevel2">
-<li><a href="#_p_1_responsibilities">P.1 Responsibilities</a></li>
-<li><a href="#_p_2_imposed_technical_choices">P.2 Imposed technical choices</a></li>
-<li><a href="#_p_3_personnel_characteristics_and_constraints">P.3 Personnel characteristics and constraints</a></li>
-<li><a href="#_p_4_schedule_milestones_and_deliverables">P.4 Schedule, milestones, and deliverables</a></li>
-<li><a href="#_p_5_description_of_individual_steps_and_tasks">P.5 Description of individual steps and tasks</a></li>
-<li><a href="#_p_6_risks_and_mitigation_analysis">P.6 Risks and mitigation analysis</a></li>
-<li><a href="#_p_7_requirements_process_and_report">P.7 Requirements process and report</a></li>
+<li><a href="#_g_1_overall_context_and_goals">G.1 Overall context and goals</a></li>
+<li><a href="#_g_2_current_situation">G.2 Current situation</a></li>
+<li><a href="#_g_3_expected_benefits">G.3 Expected benefits</a></li>
+<li><a href="#_g_4_system_overview">G.4 System overview</a></li>
+<li><a href="#_g_5_limitations_and_exclusions">G.5 Limitations and exclusions</a></li>
+<li><a href="#_g_6_stakeholders">G.6 Stakeholders</a></li>
+<li><a href="#_g_7_requirements_sources">G.7 Requirements sources</a></li>
 </ul>
 </li>
 <li><a href="#_environment">Environment</a>
@@ -472,15 +472,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_e_6_invariants">E.6 Invariants</a></li>
 </ul>
 </li>
-<li><a href="#_goals">Goals</a>
+<li><a href="#_process">Process</a>
 <ul class="sectlevel2">
-<li><a href="#_g_1_overall_context_and_goals">G.1 Overall context and goals</a></li>
-<li><a href="#_g_2_current_situation">G.2 Current situation</a></li>
-<li><a href="#_g_3_expected_benefits">G.3 Expected benefits</a></li>
-<li><a href="#_g_4_system_overview">G.4 System overview</a></li>
-<li><a href="#_g_5_limitations_and_exclusions">G.5 Limitations and exclusions</a></li>
-<li><a href="#_g_6_stakeholders">G.6 Stakeholders</a></li>
-<li><a href="#_g_7_requirements_sources">G.7 Requirements sources</a></li>
+<li><a href="#_p_1_responsibilities">P.1 Responsibilities</a></li>
+<li><a href="#_p_2_imposed_technical_choices">P.2 Imposed technical choices</a></li>
+<li><a href="#_p_3_personnel_characteristics_and_constraints">P.3 Personnel characteristics and constraints</a></li>
+<li><a href="#_p_4_schedule_milestones_and_deliverables">P.4 Schedule, milestones, and deliverables</a></li>
+<li><a href="#_p_5_description_of_individual_steps_and_tasks">P.5 Description of individual steps and tasks</a></li>
+<li><a href="#_p_6_risks_and_mitigation_analysis">P.6 Risks and mitigation analysis</a></li>
+<li><a href="#_p_7_requirements_process_and_report">P.7 Requirements process and report</a></li>
 </ul>
 </li>
 <li><a href="#_system">System</a>
@@ -517,41 +517,107 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 </div>
 </div>
 <div class="sect1">
-<h2 id="_process">Process</h2>
+<h2 id="_goals">Goals</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_p_1_responsibilities">P.1 Responsibilities</h3>
-<div id="p11" class="paragraph">
-<p>The writing effort of the <a href="#companion">Companion Book</a> is under the reponsibility of <a href="https://jmbruel.netlify.app">J.-M. Bruel</a>.</p>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_p_2_imposed_technical_choices">P.2 Imposed technical choices</h3>
-<div id="p21" class="paragraph">
-<p>The <a href="#companion">Companion Book</a> should be written in English.</p>
-</div>
-<div id="p22" class="paragraph">
-<p>The <a href="#companion">Companion Book</a> should be published in one of the compatible inputs of the publisher.</p>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_p_3_personnel_characteristics_and_constraints">P.3 Personnel characteristics and constraints</h3>
+<h3 id="_g_1_overall_context_and_goals">G.1 Overall context and goals</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_p_4_schedule_milestones_and_deliverables">P.4 Schedule, milestones, and deliverables</h3>
+<h3 id="_g_2_current_situation">G.2 Current situation</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_p_5_description_of_individual_steps_and_tasks">P.5 Description of individual steps and tasks</h3>
+<h3 id="_g_3_expected_benefits">G.3 Expected benefits</h3>
+<div id="g31" class="olist arabic">
+<ol class="arabic">
+<li>
+<p><a href="#readerC">Readers</a> of the <a href="#companion">Companion Book</a> should be able to find some templates for the requirements' book structure.</p>
+<div class="paragraph">
+<p><span class="icon"><i class="fa fa-check-circle"></i></span> <a href="https://formalrequirements.github.io/requirements-handbook/#_book_templates">Corresponding Artifact</a></p>
+</div>
+</li>
+</ol>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_g_4_system_overview">G.4 System overview</h3>
+<div class="paragraph">
+<p>The <em>system</em> under development in this specification is an unusual one: a book!
+It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_g_5_limitations_and_exclusions">G.5 Limitations and exclusions</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_p_6_risks_and_mitigation_analysis">P.6 Risks and mitigation analysis</h3>
-
+<h3 id="_g_6_stakeholders">G.6 Stakeholders</h3>
+<div class="paragraph">
+<p>Here is a non-exhaustive list of the stakeholders.</p>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<caption class="title">Table 1. Target side stakeholders</caption>
+<colgroup>
+<col style="width: 20%;">
+<col style="width: 20%;">
+<col style="width: 60%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Stakeholder</th>
+<th class="tableblock halign-left valign-top">Category</th>
+<th class="tableblock halign-left valign-top">Comment</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Springer</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Legal department</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">In charge of the edition of the <a href="#companion">Companion Book</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Readers of the <a href="#Handbook">Handbook</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">User</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Readers of the main <a href="#Handbook">Handbook</a> that might need additional information about the method</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a id="readerC"></a>Readers of the <a href="#companion">Companion Book</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">User</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Person reading the <a href="#companion">Companion Book</a> who might not have access to the main <a href="#Handbook">Handbook</a></p></td>
+</tr>
+</tbody>
+</table>
+<table class="tableblock frame-all grid-all stretch">
+<caption class="title">Table 2. Production side stakeholders</caption>
+<colgroup>
+<col style="width: 20%;">
+<col style="width: 20%;">
+<col style="width: 60%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Stakeholder</th>
+<th class="tableblock halign-left valign-top">Category</th>
+<th class="tableblock halign-left valign-top">Comment</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Bertrand Meyer</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Domain Expert</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Author of the <a href="#Handbook">Handbook</a>, and main evaluator of the <a href="#companion">Companion Book</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Project Manager</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Author and effort leader of the <a href="#companion">Companion Book</a></p></td>
+</tr>
+</tbody>
+</table>
 </div>
 <div class="sect2">
-<h3 id="_p_7_requirements_process_and_report">P.7 Requirements process and report</h3>
+<h3 id="_g_7_requirements_sources">G.7 Requirements sources</h3>
 
 </div>
 </div>
@@ -576,15 +642,15 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 <dl>
 <dt class="hdlist1"><a href="#Handbook">Handbook</a></dt>
 <dd>
-<p>The book, entitled "Handbook of requirements and business analysis", written by Bertrand Meyer (see PDF <a href="http://se.ethz.ch/~meyer/down/requirements_handbook/REQUIREMENTS.pdf">here</a>), and for which the <a href="#companion">Companion Book</a> serves as a complementary material.</p>
+<p>The book, entitled "Handbook of requirements and business analysis"; written by Bertrand Meyer (see PDF <a href="http://se.ethz.ch/~meyer/down/requirements_handbook/REQUIREMENTS.pdf">here</a>); and for which the <a href="#companion">Companion Book</a> serves as complementary material.</p>
 </dd>
 </dl>
 </div>
 <div class="paragraph">
-<p>In addition, here is the list of significations for the icons used when tracing the corresponding artifacts:</p>
+<p>Besides, here is the list of significations for the icons used when tracing the corresponding artifacts:</p>
 </div>
 <table class="tableblock frame-all grid-all stretch">
-<caption class="title">Table 1. Icons signification</caption>
+<caption class="title">Table 3. Icons signification</caption>
 <colgroup>
 <col style="width: 12.5%;">
 <col style="width: 87.5%;">
@@ -634,112 +700,41 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 </div>
 </div>
 <div class="sect1">
-<h2 id="_goals">Goals</h2>
+<h2 id="_process">Process</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_g_1_overall_context_and_goals">G.1 Overall context and goals</h3>
+<h3 id="_p_1_responsibilities">P.1 Responsibilities</h3>
+<div id="p11" class="paragraph">
+<p>The writing effort of the <a href="#companion">Companion Book</a> is under the responsibility of <a href="https://jmbruel.netlify.app">J.-M. Bruel</a>.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_p_2_imposed_technical_choices">P.2 Imposed technical choices</h3>
+<div id="p21" class="paragraph">
+<p>The <a href="#companion">Companion Book</a> should be written in English.</p>
+</div>
+<div id="p22" class="paragraph">
+<p>The <a href="#companion">Companion Book</a> should be published in one of the compatible inputs of the publisher.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_p_3_personnel_characteristics_and_constraints">P.3 Personnel characteristics and constraints</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_g_2_current_situation">G.2 Current situation</h3>
+<h3 id="_p_4_schedule_milestones_and_deliverables">P.4 Schedule, milestones, and deliverables</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_g_3_expected_benefits">G.3 Expected benefits</h3>
-<div id="g31" class="olist arabic">
-<ol class="arabic">
-<li>
-<p><a href="#readerC">Readers</a> of the <a href="#companion">Companion Book</a> should be able to find some templates for the requirements' book structure.</p>
-<details>
-<summary class="title"><span class="icon"><i class="fa fa-check-circle"></i></span> Corresponding Artifact</summary>
-<div class="content">
-<div class="paragraph">
-<p><a href="https://formalrequirements.github.io/requirements-handbook/#_book_templates" class="bare">https://formalrequirements.github.io/requirements-handbook/#_book_templates</a></p>
-</div>
-</div>
-</details>
-</li>
-</ol>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_g_4_system_overview">G.4 System overview</h3>
-<div class="paragraph">
-<p>The <em>system</em> to be developed in this specification is an unusual one: a book!
-It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_g_5_limitations_and_exclusions">G.5 Limitations and exclusions</h3>
+<h3 id="_p_5_description_of_individual_steps_and_tasks">P.5 Description of individual steps and tasks</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_g_6_stakeholders">G.6 Stakeholders</h3>
-<div class="paragraph">
-<p>Here is a non-exhaustive list of the stakeholders.</p>
-</div>
-<table class="tableblock frame-all grid-all stretch">
-<caption class="title">Table 2. Target side stakeholders</caption>
-<colgroup>
-<col style="width: 20%;">
-<col style="width: 20%;">
-<col style="width: 60%;">
-</colgroup>
-<thead>
-<tr>
-<th class="tableblock halign-left valign-top">Stakeholder</th>
-<th class="tableblock halign-left valign-top">Category</th>
-<th class="tableblock halign-left valign-top">Comment</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Springer</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Legal department</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">In charge of the edition of the <a href="#companion">Companion Book</a></p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Readers of the <a href="#Handbook">Handbook</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">User</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Readers of the main <a href="#Handbook">Handbook</a> that might need additional information about the method</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a id="readerC"></a>Readers of the <a href="#companion">Companion Book</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">User</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Person reading the <a href="#companion">Companion Book</a> who might not have access to the main <a href="#Handbook">Handbook</a></p></td>
-</tr>
-</tbody>
-</table>
-<table class="tableblock frame-all grid-all stretch">
-<caption class="title">Table 3. Production side stakeholders</caption>
-<colgroup>
-<col style="width: 20%;">
-<col style="width: 20%;">
-<col style="width: 60%;">
-</colgroup>
-<thead>
-<tr>
-<th class="tableblock halign-left valign-top">Stakeholder</th>
-<th class="tableblock halign-left valign-top">Category</th>
-<th class="tableblock halign-left valign-top">Comment</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Bertrand Meyer</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Domain Expert</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Author of the <a href="#Handbook">Handbook</a>, and main evaluator of the <a href="#companion">Companion Book</a></p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Project Manager</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Author and effort leader of the <a href="#companion">Companion Book</a></p></td>
-</tr>
-</tbody>
-</table>
+<h3 id="_p_6_risks_and_mitigation_analysis">P.6 Risks and mitigation analysis</h3>
+
 </div>
 <div class="sect2">
-<h3 id="_g_7_requirements_sources">G.7 Requirements sources</h3>
+<h3 id="_p_7_requirements_process_and_report">P.7 Requirements process and report</h3>
 
 </div>
 </div>
@@ -772,7 +767,7 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-02-07 17:29:51 +0100
+Last updated 2021-02-08 19:27:51 +0100
 </div>
 </div>
 </body>
