--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">J.-M. Bruel</span><br>
 <span id="email" class="email"><a href="mailto:bruel@irit.fr">bruel@irit.fr</a></span><br>
-<span id="revdate">1.0 -- 2021-02-08</span>
+<span id="revdate">1.1 -- 2021-02-08</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -514,6 +514,40 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 </tr>
 </table>
 </div>
+<div class="paragraph">
+<p><strong>CHANGELOG</strong></p>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 20%;">
+<col style="width: 20%;">
+<col style="width: 60%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Version</th>
+<th class="tableblock halign-left valign-top">Date</th>
+<th class="tableblock halign-left valign-top">Comment</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">1.0</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">2021-02-01</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Initial draft by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">1.1</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">2021-02-08</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Organization in separate books' files, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.1</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-02-08</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Current PDF version, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></em></p></td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 <div class="sect1">
@@ -767,7 +801,7 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-02-08 19:27:51 +0100
+Last updated 2021-02-08 19:52:00 +0100
 </div>
 </div>
 </body>
