🤖 DEPLOY: last updates

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">J.-M. Bruel</span><br>
 <span id="email" class="email"><a href="mailto:bruel@irit.fr">bruel@irit.fr</a></span><br>
-<span id="revdate">1.1 -- 2021-02-08</span>
+<span id="revdate">1.1 -- 2021-02-12</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -543,7 +543,7 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.1</em></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-02-08</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-02-12</em></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>Current PDF version, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></em></p></td>
 </tr>
 </tbody>
@@ -563,22 +563,23 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 </div>
 <div class="sect2">
 <h3 id="_g_3_expected_benefits">G.3 Expected benefits</h3>
-<div id="g31" class="olist arabic">
-<ol class="arabic">
-<li>
-<p><a href="#readerC">Readers</a> of the <a href="#companion">Companion Book</a> should be able to find some templates for the requirements' book structure.</p>
+<div id="g3-templates" class="paragraph">
+<p><code>1</code>
+<a href="#readerC">Readers</a> of the <a href="#companion">Companion Book</a> should be able to find some templates for the requirements' book structure.</p>
+</div>
 <div class="paragraph">
 <p><span class="icon"><i class="fa fa-check-circle"></i></span> <a href="https://formalrequirements.github.io/requirements-handbook/#_book_templates">Corresponding Artifact</a></p>
-</div>
-</li>
-</ol>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_g_4_system_overview">G.4 System overview</h3>
-<div class="paragraph">
-<p>The <em>system</em> under development in this specification is an unusual one: a book!
+<div id="g4-system" class="paragraph">
+<p><code>2</code>
+The <em>system</em> under development in this specification is an unusual one: a book!
 It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
+</div>
+<div class="paragraph">
+<p><span class="icon"><i class="fa fa-times-circle"></i></span> [Corresponding Artifact]</p>
 </div>
 </div>
 <div class="sect2">
@@ -638,14 +639,14 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Bertrand Meyer</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Author of the Handbook</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Domain Expert</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Author of the <a href="#Handbook">Handbook</a>, and main evaluator of the <a href="#companion">Companion Book</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Bertrand Meyer, author of the <a href="#Handbook">Handbook</a>, and main evaluator of the <a href="#companion">Companion Book</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Author of the Companion Book</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Project Manager</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Author and effort leader of the <a href="#companion">Companion Book</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://jmbruel.netlify.app">J.-M. Bruel</a>, author and effort leader of the <a href="#companion">Companion Book</a></p></td>
 </tr>
 </tbody>
 </table>
@@ -662,8 +663,13 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 <div class="sect2">
 <h3 id="_e_1_glossary">E.1 Glossary</h3>
 <div class="paragraph">
-<p>In this section, we define the domain-specific terms used in this document.</p>
+<p>This section defines the domain-specific terms used in this document.</p>
 </div>
+<div class="paragraph">
+<p>It also lists the icons used in this document.</p>
+</div>
+<div class="sect3">
+<h4 id="_1_terms"><code>1</code> Terms</h4>
 <div id="companion" class="dlist">
 <dl>
 <dt class="hdlist1"><a href="#companion">Companion Book</a></dt>
@@ -680,8 +686,11 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </dd>
 </dl>
 </div>
+</div>
+<div class="sect3">
+<h4 id="_2_icons"><code>2</code> Icons</h4>
 <div class="paragraph">
-<p>Besides, here is the list of significations for the icons used when tracing the corresponding artifacts:</p>
+<p>Here is the list of significations for the icons used when tracing the corresponding artifacts:</p>
 </div>
 <table class="tableblock frame-all grid-all stretch">
 <caption class="title">Table 3. Icons signification</caption>
@@ -710,6 +719,7 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </tr>
 </tbody>
 </table>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_e_2_components">E.2 Components</h3>
