🐛 FIX: Update titles

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">J.-M. Bruel</span><br>
 <span id="email" class="email"><a href="mailto:bruel@irit.fr">bruel@irit.fr</a></span><br>
-<span id="revdate">1.1 -- 2021-02-12</span>
+<span id="revdate">1.1 -- 2021-02-19</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -474,22 +474,23 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#_process">Process</a>
 <ul class="sectlevel2">
-<li><a href="#_p_1_responsibilities">P.1 Responsibilities</a></li>
-<li><a href="#_p_2_imposed_technical_choices">P.2 Imposed technical choices</a></li>
-<li><a href="#_p_3_personnel_characteristics_and_constraints">P.3 Personnel characteristics and constraints</a></li>
-<li><a href="#_p_4_schedule_milestones_and_deliverables">P.4 Schedule, milestones, and deliverables</a></li>
-<li><a href="#_p_5_description_of_individual_steps_and_tasks">P.5 Description of individual steps and tasks</a></li>
-<li><a href="#_p_6_risks_and_mitigation_analysis">P.6 Risks and mitigation analysis</a></li>
+<li><a href="#_p_1_roles">P.1 Roles</a></li>
+<li><a href="#_p_2_personnel_characteristics_and_constraints">P.2 Personnel characteristics and constraints</a></li>
+<li><a href="#_p_3_imposed_technical_choices">P.3 Imposed technical choices</a></li>
+<li><a href="#_p_4_schedule_and_milestones">P.4 Schedule and milestones</a></li>
+<li><a href="#_p_5_tasks_and_deliverables">P.5 Tasks and deliverables</a></li>
+<li><a href="#_p_6_risk_and_mitigation_analysis">P.6 Risk and mitigation analysis</a></li>
 <li><a href="#_p_7_requirements_process_and_report">P.7 Requirements process and report</a></li>
 </ul>
 </li>
 <li><a href="#_system">System</a>
 <ul class="sectlevel2">
-<li><a href="#_s_1_list_of_components">S.1 List of components</a></li>
-<li><a href="#_s_2_provided_functionality">S.2 Provided functionality</a></li>
-<li><a href="#_s_3_provided_interfaces">S.3 Provided interfaces</a></li>
-<li><a href="#_s_4_example_scenarios">S.4 Example scenarios</a></li>
+<li><a href="#_s_1_components">S.1 Components</a></li>
+<li><a href="#_s_2_functionality">S.2 Functionality</a></li>
+<li><a href="#_s_3_interfaces">S.3 Interfaces</a></li>
+<li><a href="#_s_4_scenarios_use_cases_user_stories">S.4 Scenarios (use cases, user stories)</a></li>
 <li><a href="#_s_5_prioritization">S.5 Prioritization</a></li>
+<li><a href="#_s_6_verification_and_acceptance_criteria">S.6 Verification and acceptance criteria</a></li>
 </ul>
 </li>
 </ul>
@@ -543,7 +544,7 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.1</em></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-02-12</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-02-19</em></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>Current PDF version, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></em></p></td>
 </tr>
 </tbody>
@@ -747,34 +748,34 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 <h2 id="_process">Process</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_p_1_responsibilities">P.1 Responsibilities</h3>
+<h3 id="_p_1_roles">P.1 Roles</h3>
 <div id="p11" class="paragraph">
 <p>The writing effort of the <a href="#companion">Companion Book</a> is under the responsibility of <a href="https://jmbruel.netlify.app">J.-M. Bruel</a>.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_p_2_imposed_technical_choices">P.2 Imposed technical choices</h3>
-<div id="p21" class="paragraph">
+<h3 id="_p_2_personnel_characteristics_and_constraints">P.2 Personnel characteristics and constraints</h3>
+
+</div>
+<div class="sect2">
+<h3 id="_p_3_imposed_technical_choices">P.3 Imposed technical choices</h3>
+<div id="p31" class="paragraph">
 <p>The <a href="#companion">Companion Book</a> should be written in English.</p>
 </div>
-<div id="p22" class="paragraph">
+<div id="p32" class="paragraph">
 <p>The <a href="#companion">Companion Book</a> should be published in one of the compatible inputs of the publisher.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_p_3_personnel_characteristics_and_constraints">P.3 Personnel characteristics and constraints</h3>
+<h3 id="_p_4_schedule_and_milestones">P.4 Schedule and milestones</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_p_4_schedule_milestones_and_deliverables">P.4 Schedule, milestones, and deliverables</h3>
+<h3 id="_p_5_tasks_and_deliverables">P.5 Tasks and deliverables</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_p_5_description_of_individual_steps_and_tasks">P.5 Description of individual steps and tasks</h3>
-
-</div>
-<div class="sect2">
-<h3 id="_p_6_risks_and_mitigation_analysis">P.6 Risks and mitigation analysis</h3>
+<h3 id="_p_6_risk_and_mitigation_analysis">P.6 Risk and mitigation analysis</h3>
 
 </div>
 <div class="sect2">
@@ -787,23 +788,27 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 <h2 id="_system">System</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_s_1_list_of_components">S.1 List of components</h3>
+<h3 id="_s_1_components">S.1 Components</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_s_2_provided_functionality">S.2 Provided functionality</h3>
+<h3 id="_s_2_functionality">S.2 Functionality</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_s_3_provided_interfaces">S.3 Provided interfaces</h3>
+<h3 id="_s_3_interfaces">S.3 Interfaces</h3>
 
 </div>
 <div class="sect2">
-<h3 id="_s_4_example_scenarios">S.4 Example scenarios</h3>
+<h3 id="_s_4_scenarios_use_cases_user_stories">S.4 Scenarios (use cases, user stories)</h3>
 
 </div>
 <div class="sect2">
 <h3 id="_s_5_prioritization">S.5 Prioritization</h3>
+
+</div>
+<div class="sect2">
+<h3 id="_s_6_verification_and_acceptance_criteria">S.6 Verification and acceptance criteria</h3>
 
 </div>
 </div>
@@ -811,7 +816,7 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-02-08 19:52:00 +0100
+Last updated 2021-02-12 22:18:13 +0100
 </div>
 </div>
 </body>
