Work on the process book

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">J.-M. Bruel</span><br>
 <span id="email" class="email"><a href="mailto:bruel@irit.fr">bruel@irit.fr</a></span><br>
-<span id="revdate">1.1 -- 2021-02-20</span>
+<span id="revdate">1.2 -- 2021-02-21</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -543,8 +543,13 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 <td class="tableblock halign-left valign-top"><p class="tableblock">Organization in separate books' files, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.1</em></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-02-20</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">1.2</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">2021-02-21</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Writting of the Process book, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.2</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-02-21</em></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>Current PDF version, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></em></p></td>
 </tr>
 </tbody>
@@ -747,40 +752,162 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 <div class="sect1">
 <h2 id="_process">Process</h2>
 <div class="sectionbody">
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+<div class="title">Front matter</div>
+
+</td>
+</tr>
+</table>
+</div>
 <div class="sect2">
 <h3 id="_p_1_roles">P.1 Roles</h3>
-<div id="p11" class="paragraph">
-<p>The writing effort of the <a href="#companion">Companion Book</a> is under the responsibility of <a href="https://jmbruel.netlify.app">J.-M. Bruel</a>.</p>
+<div id="p1-roles" class="paragraph">
+<p><code>1</code>
+Here are the roles for the production of the <a href="#companion">Companion Book</a>:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Leader: The person in charge of leading and organizing the writing effort.</p>
+</li>
+<li>
+<p>Writers: The persons contributing to the writing effort.</p>
+</li>
+<li>
+<p>Reviewers: The persons in charge of reviewing the <a href="#companion">Companion Book</a>.</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p><span class="icon"><i class="fa fa-check-circle"></i></span> <a href="https://formalrequirements.github.io/requirements-handbook-companion/#_book_templates">Corresponding Artifact</a></p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_p_2_personnel_characteristics_and_constraints">P.2 Personnel characteristics and constraints</h3>
-
+<div id="p1-persons" class="paragraph">
+<p><code>2</code>
+Here are the identified people involved in the development of the <a href="#companion">Companion Book</a>:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Leader: The writing effort of the <a href="#companion">Companion Book</a> is under the responsibility of <a href="https://jmbruel.netlify.app">J.-M. Bruel</a>.</p>
+</li>
+<li>
+<p>Writers: In addition to <a href="https://jmbruel.netlify.app">J.-M. Bruel</a>, here are the persons involved: Sophie Ebersold, Marya Naumchev, Alexandr Naumchev, Florian Galinier</p>
+</li>
+<li>
+<p>Reviewers: In addition to Bertrand Meyer, author of <a href="#Handbook">Handbook</a>, some reviewers will be found among early adopters of <a href="#Handbook">Handbook</a>.</p>
+</li>
+</ul>
+</div>
+<details>
+<summary class="title">TBD</summary>
+<div class="content">
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Author</dt>
+<dd>
+<p><a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p>
+</dd>
+<dt class="hdlist1">Date</dt>
+<dd>
+<p>2021-02-21</p>
+</dd>
+<dt class="hdlist1">Deadline</dt>
+<dd>
+<p>June</p>
+</dd>
+<dt class="hdlist1">Importance</dt>
+<dd>
+<p>serious</p>
+</dd>
+<dt class="hdlist1">Needs</dt>
+<dd>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p><i class="fa fa-square-o"></i> stakeholders to ask</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> documentation to consider</p>
+</li>
+<li>
+<p><i class="fa fa-check-square-o"></i> management decision (by Bertrand Meyer)</p>
+</li>
+</ul>
+</div>
+</dd>
+</dl>
+</div>
+</div>
+</details>
+<div class="paragraph">
+<p><span class="icon"><i class="fa fa-check-circle"></i></span> <a href="https://formalrequirements.github.io/requirements-handbook-companion/#_book_templates">Corresponding Artifact</a></p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_p_3_imposed_technical_choices">P.3 Imposed technical choices</h3>
-<div id="p31" class="paragraph">
-<p>The <a href="#companion">Companion Book</a> should be written in English.</p>
+<div id="p1-English" class="paragraph">
+<p><code>3</code>
+The <a href="#companion">Companion Book</a> should be written in English.</p>
 </div>
-<div id="p32" class="paragraph">
-<p>The <a href="#companion">Companion Book</a> should be published in one of the compatible inputs of the publisher.</p>
+<div id="p1-Springer" class="paragraph">
+<p><code>4</code>
+The <a href="#companion">Companion Book</a> should be written in one of the compatible inputs of the publisher, Springer.</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_p_4_schedule_and_milestones">P.4 Schedule and milestones</h3>
-
+<div id="p1-date" class="paragraph">
+<p><code>5</code>
+The expected date of the <a href="#companion">Companion Book</a> is end of June.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_p_5_tasks_and_deliverables">P.5 Tasks and deliverables</h3>
-
+<div id="p1-repo" class="paragraph">
+<p><code>6</code>
+The tasks are managed through the use of a collaborative repository: <a href="https://github.com/FormalRequirements/requirements-handbook" class="bare">https://github.com/FormalRequirements/requirements-handbook</a>.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_p_6_risk_and_mitigation_analysis">P.6 Risk and mitigation analysis</h3>
-
+<div class="paragraph">
+<p>At this point, there is no mitigation analysis.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_p_7_requirements_process_and_report">P.7 Requirements process and report</h3>
-
+<div class="paragraph">
+<p>The production of the <a href="#companion">Companion Book</a> will not follow a particular requirements process.</p>
+</div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+<div class="title">Back matter</div>
+<div class="dlist">
+<dl>
+<dt class="hdlist1">TBD list</dt>
+<dd>
+<p><a href="#p1-persons">[p1-persons]</a>.</p>
+</dd>
+</dl>
+</div>
+</td>
+</tr>
+</table>
+</div>
 </div>
 </div>
 </div>
@@ -816,7 +943,7 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-02-20 15:26:56 +0100
+Last updated 2021-02-21 17:10:46 +0100
 </div>
 </div>
 </body>
