--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">1.2</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">2021-02-21</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Writting of the Process book, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Writing of the Process book, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.2</em></p></td>
@@ -867,7 +867,7 @@ The <a href="#companion">Companion Book</a> should be written in one of the comp
 <h3 id="_p_4_schedule_and_milestones">P.4 Schedule and milestones</h3>
 <div id="p1-date" class="paragraph">
 <p><code>5</code>
-The expected date of the <a href="#companion">Companion Book</a> is end of June.</p>
+The expected date of the <a href="#companion">Companion Book</a> is the end of June.</p>
 </div>
 </div>
 <div class="sect2">
