🐛 FIX: Typo in method definition

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 <h3 id="_g_1_overall_context_and_goals">G.1 Overall context and goals</h3>
 <div id="g1-mainGoal" class="paragraph">
 <p><code>1</code>
-The main purpose of the <a href="#companion">Companion Book</a> is to complement the  <a href="#Handbook">Handbook</a> by providing useful additional material, examples, templates, and full {method} use cases.</p>
+The main purpose of the <a href="#companion">Companion Book</a> is to complement the  <a href="#Handbook">Handbook</a> by providing useful additional material, examples, templates, and full <b>PEGS</b> use cases.</p>
 </div>
 <div class="paragraph">
 <p><span class="icon"><i class="fa fa-times-circle"></i></span> [Corresponding Artifact]</p>
@@ -1020,7 +1020,7 @@ It only governs the actual contents, ignoring the front and back matter.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-02-26 10:30:34 +0100
+Last updated 2021-02-26 10:35:48 +0100
 </div>
 </div>
 </body>
