--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">J.-M. Bruel</span><br>
 <span id="email" class="email"><a href="mailto:bruel@irit.fr">bruel@irit.fr</a></span><br>
-<span id="revdate">1.2.1 -- 2021-02-26</span>
+<span id="revdate">1.2.1 -- 2021-03-23</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -554,7 +554,7 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.2.1</em></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-02-26</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-03-23</em></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>Current PDF version, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></em></p></td>
 </tr>
 </tbody>
@@ -721,12 +721,12 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 <p>It also lists the icons used in this document.</p>
 </div>
 <div class="sect3">
-<h4 id="_1_terms"><code>1</code> Terms</h4>
+<h4 id="e1-terms"><code>1</code> Terms</h4>
 <div id="companion" class="dlist">
 <dl>
 <dt class="hdlist1"><a href="#companion">Companion Book</a></dt>
 <dd>
-<p>The <em>system</em> to be developed. Current version available <a href="https://formalrequirements.github.io/requirements-handbook-companion">here</a>.</p>
+<p>The <em>system</em> to be developed: the companion book of <a href="#Handbook">[Handbook]</a>. Current version available <a href="https://formalrequirements.github.io/requirements-handbook-companion">here</a>.</p>
 </dd>
 </dl>
 </div>
@@ -734,7 +734,7 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 <dl>
 <dt class="hdlist1"><a href="#Handbook">Handbook</a></dt>
 <dd>
-<p>The book, entitled "Handbook of requirements and business analysis", written by Bertrand Meyer (see PDF <a href="http://se.ethz.ch/~meyer/down/requirements_handbook/REQUIREMENTS.pdf">here</a>), and for which the <a href="#companion">Companion Book</a> serves as complementary material.</p>
+<p>The book, entitled "Handbook of requirements and business analysis", written by Bertrand Meyer (see PDF <a href="http://se.ethz.ch/~meyer/down/requirements_handbook/REQUIREMENTS.pdf">here</a>), and for which the <a href="#companion">[companion]</a> serves as complementary material.</p>
 </dd>
 </dl>
 </div>
@@ -775,23 +775,34 @@ It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </div>
 <div class="sect2">
 <h3 id="_e_2_components">E.2 Components</h3>
-
+<div class="paragraph">
+<p>Not applicable.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_e_3_constraints">E.3 Constraints</h3>
-
+<div class="paragraph">
+<p><code>1</code>
+The <a href="#companion">[companion]</a> should itself apply the method described in the <a href="#handbook">[handbook]</a>.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_e_4_assumptions">E.4 Assumptions</h3>
-
+<div class="paragraph">
+<p>Not applicable.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_e_5_effects">E.5 Effects</h3>
-
+<div class="paragraph">
+<p>Not applicable.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_e_6_invariants">E.6 Invariants</h3>
-
+<div class="paragraph">
+<p>Not applicable.</p>
+</div>
 </div>
 </div>
 </div>
@@ -965,7 +976,22 @@ The tasks are managed through the use of a collaborative repository: <a href="ht
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_s_1_components">S.1 Components</h3>
-
+<div class="paragraph">
+<p>The components of the <a href="#companion">[companion]</a> initially identified are the following:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a id="s1-overview"></a> <code>1</code> An overview of the <b>PEGS</b> method.</p>
+</li>
+<li>
+<p><a id="s1-caseStudies"></a> <code>2</code> At least one case study (<a href="https://formalrequirements.github.io/roboraceRequirements/">Roborace</a>)</p>
+</li>
+<li>
+<p><a id="s1-bookTemplates"></a> <code>3</code> At least one book template</p>
+</li>
+</ul>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_s_2_functionality">S.2 Functionality</h3>
@@ -1020,7 +1046,7 @@ It only governs the actual contents, ignoring the front and back matter.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-02-26 10:35:48 +0100
+Last updated 2021-03-19 11:58:08 +0100
 </div>
 </div>
 </body>
