🤖 DEPLOY: last updates

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">J.-M. Bruel</span><br>
 <span id="email" class="email"><a href="mailto:bruel@irit.fr">bruel@irit.fr</a></span><br>
-<span id="revdate">1.2.1 -- 2021-03-23</span>
+<span id="revdate">1.2.2 -- 2021-04-16</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -553,8 +553,13 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 <td class="tableblock halign-left valign-top"><p class="tableblock">Minor improvements of verification rules, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.2.1</em></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-03-23</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">1.2.2</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">2021-04-16</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Minor improvements of goals, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>1.2.2</em></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><em>2021-04-16</em></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><em>Current PDF version, by <a href="https://jmbruel.netlify.app">J.-M. Bruel</a></em></p></td>
 </tr>
 </tbody>
@@ -572,7 +577,7 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 </td>
 <td class="content">
 <div class="title">Front matter</div>
-
+<!-- toc disabled -->
 </td>
 </tr>
 </table>
@@ -583,13 +588,13 @@ It uses the Asciidoc template available <a href="https://github.com/FormalRequir
 <p><code>1</code>
 The main purpose of the <a href="#companion">Companion Book</a> is to complement the  <a href="#Handbook">Handbook</a> by providing useful additional material, examples, templates, and full <b>PEGS</b> use cases.</p>
 </div>
-<div class="paragraph">
-<p><span class="icon"><i class="fa fa-times-circle"></i></span> [Corresponding Artifact]</p>
-</div>
 </div>
 <div class="sect2">
 <h3 id="_g_2_current_situation">G.2 Current situation</h3>
-
+<div id="g2-current" class="paragraph">
+<p><code>1</code>
+The only available material is the current status of the <a href="#Handbook">Handbook</a>.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_g_3_expected_benefits">G.3 Expected benefits</h3>
@@ -598,7 +603,7 @@ The main purpose of the <a href="#companion">Companion Book</a> is to complement
 <a href="#readerC">Readers</a> of the <a href="#companion">Companion Book</a> should be able to find some templates for the requirements' book structure.</p>
 </div>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-check-circle"></i></span> <a href="https://formalrequirements.github.io/requirements-handbook-companion/#_book_templates">Corresponding Artifact</a></p>
+<p><span class="icon"><i class="fa fa-check-circle"></i></span> <a href="https://formalrequirements.github.io/requirements-handbook-companion">Corresponding Artifact</a></p>
 </div>
 </div>
 <div class="sect2">
@@ -609,7 +614,7 @@ The <em>system</em> under development in this specification is an unusual one: a
 It will serve as a companion for the <a href="#Handbook">Handbook</a>.</p>
 </div>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-times-circle"></i></span> [Corresponding Artifact]</p>
+<p><span class="icon"><i class="fa fa-check-circle"></i></span> <a href="https://formalrequirements.github.io/requirements-handbook-companion/#_book_templates">Corresponding Artifact</a></p>
 </div>
 </div>
 <div class="sect2">
@@ -1046,7 +1051,7 @@ It only governs the actual contents, ignoring the front and back matter.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-03-19 11:58:08 +0100
+Last updated 2021-04-16 14:55:43 +0200
 </div>
 </div>
 </body>
